/*
 * $Id: ChangeLog,v 1.1994 2004/01/05 15:24:00 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-01-05 19:50 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * bin/bld.bat
    * add -lgdi32 -lcomctl32 to mingw32 for gtwvt
  * source/rtl/gtwvt/gtwvt.c
    * add HB_OS_WIN_32_USED and changed includes order 
      to fix mingw32 warnings
  * source/rtl/filesys.c
    * add a __WATCOMC__ to fix OpenWatcom/W32 ferror()
  * config/bsd/gcc.cf
  * config/dos/djgpp.cf
  * config/linux/gcc.cf
  * config/w32/mingw32.cf
    * add support of HB_USER_LIBS to link users libs
  * config/prg.cf
  * config/rules.cf
  + config/dos/clipper.cf
    * add support of HB_COMPILER=clipper to build clipper applications

2004-01-05 16:28 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/rtl/gtxvt/gtxvt.c
  * source/rtl/gtxvt/gtxvt.h
    * Now the system implements twin process coordination; one process
      manages the window and the other (bound to the xharbour VM) manages
      the buffer.

2004-01-05 05:50 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/rtl/gtxvt/gtxvt.c
  * source/rtl/gtxvt/gtxvt.h
    ! GT is now initialized only after screen output is done
    * internal api rationlaization
    * preliminary works for process splitting.

2004-01-05 01:00 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@brturbo.com>
  * utils/hbmake.prg
    utils/hbmutils.prg
    ! minor fix for lib files include on linux 

2004-01-04 21:45 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@brturbo.com>
  * contrib/libct/net.c
    ! code formated and optimized
                                                                           
2004-01-04 15:15 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * contrib/libct/net.c